--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.265.0",
     "next": "13.4.13",
     "next-auth": "^4.22.5",
+    "next-cloudinary": "^4.18.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
