--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-toast": "^1.1.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-js": "^2.1.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
@@ -23,7 +24,7 @@
     "formidable": "^3.5.0",
     "formik": "^2.4.3",
     "lucide-react": "^0.265.0",
-    "next": "13.4.13",
+    "next": "^13.4.19",
     "next-auth": "^4.22.5",
     "next-cloudinary": "^4.18.1",
     "postcss": "8.4.27",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "stripe": "^13.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
