--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "stripe": "^13.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
