--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.14.6",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-toast": "^1.1.4",
