--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/cart/NavCartSession.jsx"  ],
   "exclude": [
     "node_modules"
   ]
