--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "next-auth": "^4.22.5",
     "next-cloudinary": "^4.18.1",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
