--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.14.6",
+    "@mantine/carousel": "^7.1.0",
+    "@mantine/core": "^7.1.0",
+    "@mantine/form": "^7.1.0",
+    "@mantine/hooks": "^7.1.0",
+    "@mantine/modals": "^7.1.0",
+    "@mantine/notifications": "^7.1.0",
+    "@mantine/nprogress": "^7.1.0",
     "@prisma/client": "^5.1.1",
-    "@radix-ui/react-toast": "^1.1.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-js": "^2.1.0",
+    "@tabler/icons-react": "^2.36.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^7.1.0",
     "formidable": "^3.5.0",
     "formik": "^2.4.3",
     "lucide-react": "^0.265.0",
     "next": "^13.4.19",
     "next-auth": "^4.22.5",
     "next-cloudinary": "^4.18.1",
-    "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
-    "react-responsive-carousel": "^3.2.23",
     "stripe": "^13.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -43,6 +45,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.4.9",
+    "postcss": "^8.4.30",
+    "postcss-preset-mantine": "^1.7.0",
+    "postcss-simple-vars": "^7.0.1",
     "prisma": "^5.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
